--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="next bg-gray">
        <header class="site-header">
             <nav class="navbar">
-                <div class="c-logo">CHAVIWEB</div>
+                <div class="c-logo">
+                    <iframe src="img/logo.svg"></iframe>
+                </div>
                 <div class="main-menu">
                     <ul class="menu-list">
                         <div>
