--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-    <div class="next bg-gray">
+    <div class="next">
        <header class="site-header">
             <nav class="navbar">
                 <div class="c-logo">
@@ -32,11 +32,7 @@
                         <a href="#">Nosotros</a>
                     </ul>
                 </div>
-                <div class="phone">
-                    <iframe src="img/telefono.svg" frameborder="0"></iframe>
-                    <p>6485-3720</p>
-                </div>
-                <div class="icon-div">
+                <div class="menu-zone">
                     <div>
                         <button type="button" id="btnShowMenu"></button>
                         <iframe src="img/menu.svg" frameborder="0"></iframe>
@@ -48,13 +44,16 @@
        <div class="hero">
            <div class="hero-img">
            </div>
-           <div class="container">
-            <h2 class="title text-center">Innovación y Precios bajos</h2>
+           <div class="container" id="">
+            <h1 id="title" class="title text-center "></h1>
+            <a href="#"id="btnMain" class="btn-main text-center translate-right">Ir a la tienda</a>
            </div>
        </div>
-       <section class="section">
+       <section class="section bg-gray">
             <h2 class="title-services text-center">Servicios</h2>
        </section>
     </div>
+
+   
 </body>
 </html>
