--- a/index.html
+++ b/index.html
@@ -1,59 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/fontawesome.min.css" integrity="sha512-8jdwayz5n8F2cnW26l9vpV6+yGOcRAqz6HTu+DQ3FtVIAts2gTdlFZOGpYhvBMXkWEgxPN3Y22UWyZXuDowNLA==" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/countdown.js"></script>
     <script src="js/app.js"></script>
-</head>
-<body>
-    <div class="next">
-       <header class="site-header">
-            <nav class="navbar">
-                <div class="c-logo">
-                    <iframe src="img/logo.svg"></iframe>
-                </div>
-                <div class="main-menu">
-                    <ul class="menu-list">
-                        <div>
-                            <button id="exitMenu" type="button"></button>
-                            <iframe src="img/salida.svg" frameborder="0"></iframe> 
-                        </div>
-                        <a href="#">Inicio</a>
-                        <a href="#">Tienda</a>
-                        <a href="#">Carrito</a>
-                        <a href="#">Nosotros</a>
-                    </ul>
-                </div>
-                <div class="menu-zone">
-                    <div>
-                        <button type="button" id="btnShowMenu"></button>
-                        <iframe src="img/menu.svg" frameborder="0"></iframe>
-                    </div>
-                    <p>Menú</p>
-                </div>
-            </nav>
-       </header>
-       <div class="hero">
-           <div class="hero-img">
-           </div>
-           <div class="container" id="">
-            <h1 id="title" class="title text-center "></h1>
-            <a href="#"id="btnMain" class="btn-main text-center translate-right">Ir a la tienda</a>
-           </div>
-       </div>
-       <section class="section bg-gray">
-            <h2 class="title-services text-center">Servicios</h2>
-       </section>
+  </head>
+  <body>
+    <div class="info-contact">
+      <div class="container">
+        <ul class="list-contact">
+          <li>
+            <iframe src="img/telefono.svg" class="color-icon"> </iframe>
+            <p>+50764853720</p>
+          </li>
+          <li>
+            <iframe src="img/email.svg"></iframe>
+            <p>jcharris.villa@gmail.com</p>
+          </li>
+        </ul>
+      </div>
     </div>
 
-   
-</body>
+    <header class="site-header">
+      <nav class="navbar">
+        <div class="c-logo">
+          <iframe src="img/logo.svg"></iframe>
+        </div>
+        <div class="ctn-car-looker">
+          <div class="container">
+            <div class="car-looker">
+              <div class="car">
+                <div class="car-logo">
+                  <iframe src="img/car.svg" frameborder="0"></iframe>
+                </div>
+                <div class="car-price">
+                  $319,99
+                </div>
+              </div>
+              <div class="looker">
+                <div class="looker-input"> 
+                    <input type="text" />
+                </div>
+                <div class="looker-btn">
+                    <button type="submit" class="btn-submit">
+                    </button>
+                      <img src="img/looker.png"></img>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main-menu">
+          <ul class="menu-list">
+            <div>
+              <button id="exitMenu" type="button"></button>
+              <iframe src="img/salida.svg" frameborder="0"></iframe>
+            </div>
+            <a href="#">Inicio</a>
+            <a href="#">Tienda</a>
+            <a href="#">Carrito</a>
+            <a href="#">Nosotros</a>
+          </ul>
+        </div>
+        <div class="menu-zone">
+          <div>
+            <button type="button" id="btnShowMenu"></button>
+            <iframe src="img/menu.svg" frameborder="0"></iframe>
+          </div>
+          <p>Menú</p>
+        </div>
+      </nav>
+    </header>
+    <div class="hero">
+      <div class="hero-img"></div>
+      <div class="container" id="">
+        <h1 id="title" class="title text-center"></h1>
+        <a href="#" id="btnMain" class="btn-main text-center translate-right"
+          >Ir a la tienda</a
+        >
+      </div>
+    </div>
+    <section class="section bg-gray">
+      <h2 class="title-services text-center">Servicios</h2>
+    </section>
+  </body>
 </html>
