--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <header class="site-header">
       <nav class="navbar">
-        <div class="c-logo">
-          <iframe src="img/logo.svg"></iframe>
+        <div class="c-logo container">
+          <img src="img/logo.png"></img>
         </div>
         <div class="ctn-car-looker">
           <div class="container">
