--- a/index.html
+++ b/index.html
@@ -104,17 +104,67 @@
       </ul>
     </div>
   
-      <div class="hero">
-        <div class="hero-img"></div>
-        <div class="hero-title" id="">
-          <h1 id="title" class="title text-center"></h1>
-          <a href="#" id="btnMain" class="btn-main text-center translate-right"
-            >Ir a la tienda</a
-          >
+    <div class="hero">
+      <div class="hero-img"></div>
+      <div class="hero-title" id="">
+        <h1 id="title" class="title text-center"></h1>
+        <a href="#" id="btnMain" class="btn-main text-center translate-right"
+          >Elige Paquetes en la Tienda</a
+        >
+      </div>
+    </div>
+    <section class="section">
+      <h2 class="title-services text-center">Viajes</h2>
+      <div class="card-zone container">
+        <div class="card-container">
+          <div class="card">
+            <img src="img/londres.png" alt="">
+            <div class="card-content">
+              <p class="category">Travel</p>
+              <h3>Viaja a Londres Este Verano</h3>
+              <div class="description-travel">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nisi!
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima delectus at laborum nemo soluta ipsa?
+                </p>
+              </div>
+              <a href="#" class="link-more">Leer más</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="img/roma.jpg" alt="">
+            <div class="card-content">
+              <p class="category">Travel</p>
+              <h3>Viaja a Roma Este Verano</h3>
+              <div class="description-travel">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nisi!
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima delectus at laborum nemo soluta ipsa?
+                </p>
+              </div>
+              <a href="#" class="link-more">Leer más</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="img/paris.jpg" alt="">
+            <div class="card-content">
+              <p class="category">Travel</p>
+              <h3>Viaja a París Este Verano</h3>
+              <div class="description-travel">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, nisi!
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima delectus at laborum nemo soluta ipsa?
+                </p>
+              </div>
+              <a href="#" class="link-more">Leer más</a>
+            </div>
+          </div>
         </div>
       </div>
-      <section class="section">
-        <h2 class="title-services text-center">Servicios</h2>
-      </section>
+    </section>
   </body>
 </html>
