--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <div id="overlay" class=""></div>
     <div class="info-contact">
       <div class="container-info-contact">
         <ul class="list-contact">
