--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/countdown.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -165,6 +163,14 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="section about">
+      <h2 class="title-about text-center">Quíenes Somos</h2>
+      <div class="about-description container">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem inventore sunt ratione voluptas omnis provident, quo ex ab asperiores sequi dicta voluptate nemo, tempora obcaecati corporis excepturi porro quos veniam officiis consequatur dignissimos. Iusto optio quia quas esse suscipit eaque, tempore magni facere reiciendis tenetur accusamus impedit fuga laudantium consectetur.
+        </p>
       </div>
     </section>
   </body>
