--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
           <div class="c-logo">
             <img src="img/logo.png" alt="" srcset="">
           </div>
+          <div class="main-menu ">
+            <ul class="menu-list">
+              <div>
+                <button id="exitMenu" type="button"></button>
+                <iframe src="img/salida.svg" frameborder="0"></iframe>
+              </div>
+              <a href="#">Inicio</a>
+              <a href="#">Damas</a>
+              <a href="#">Caballeros</a>
+              <a href="#">Niños</a>
+              <a href="#">Ofertas</a>
+            </ul>
+          </div>
           <div class="c-car">
            <img src="img/carro.png" alt="">
           </div>
@@ -43,34 +56,7 @@
         </nav>
       </div>
     </header>
-    <div class="container">
-      <div class="parent-main-menu-lg">
-        <div class="main-menu-lg ">
-          <ul class="menu-list-lg">
-            <a href="#">Home</a>
-            <a href="#">Computación</a>
-            <a href="#">Electrónica</a>
-            <a href="#">Oficina</a>
-            <a href="#">Redes</a>
-            <a href="#">Movilidad</a>
-            <a href="#">Seguridad</a>
-          </ul>    
-        </div>
-      </div>
-    </div>
-    <div class="main-menu ">
-      <ul class="menu-list">
-        <div>
-          <button id="exitMenu" type="button"></button>
-          <iframe src="img/salida.svg" frameborder="0"></iframe>
-        </div>
-        <a href="#">Inicio</a>
-        <a href="#">Tienda</a>
-        <a href="#">Carrito</a>
-        <a href="#">Nosotros</a>
-      </ul>
-    </div>
-  
+
     <div class="hero">
       <div class="hero-img"></div>
       <div class="hero-title" id="">
@@ -81,7 +67,7 @@
       </div>
     </div>
     <section class="section">
-      <h2 class="title-services text-center">Viajes</h2>
+     
       <div class="card-zone container">
         <div class="card-container">
           <div class="card">
