--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         
           <div class="c-user">
-            <img src="img/carro.png" alt="">
+            <img src="img/user.png" alt="">
           </div>
         </nav>
       </div>
