--- a/index.html
+++ b/index.html
@@ -65,7 +65,21 @@
         >
       </div>
     </div>
-    <section class="section">
+    <section class="section categories">
+      <div class="div-categories">
+        <a href="#" class="link-categories">
+          <span class="text-categories">Ropa de damas y caballeros</span>
+          <img src="img/caballeros.jpg" alt="caballeros" srcset="">
+        </a>
+        <a href="" class="link-categories">
+          <span class="text-categories">Muebles para tu hogar</span>
+          <img src="img/sala.jpg" alt="sala">
+        </a>
+        <a href="" class="link-categories">
+          <span class="text-categories">Juguetería para tus niños</span>
+          <img src="img/juguetes.jpg" alt="sala">
+        </a>
+      </div>
     </section>
       
 </html>
