--- a/index.html
+++ b/index.html
@@ -81,5 +81,30 @@
         </a>
       </div>
     </section>
-      
+    <section>
+      <h2 class="text-center">Recomendados</h2>
+      <p class="text-center card-title">Lo más vendido esta semana</p>
+      <div class="card">
+        <div class="card-img">
+          <img src="img/lampara.jpeg" alt="lampara">
+        </div>
+        <form>
+          <p class="clasificacion text-center">
+            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+            --><label for="radio1">★</label><!--
+            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+            --><label for="radio2">★</label><!--
+            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+            --><label for="radio3">★</label><!--
+            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+            --><label for="radio4">★</label><!--
+            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+            --><label for="radio5">★</label>
+          </p>
+          <p class="text-center">Opiniones</p>
+        </form>
+        <h3 class="text-center">Lámpara Tubular Negra</h3>
+        <p class="price text-center">$35,00</p>
+      </div>
+    </section>
 </html>
