--- a/index.html
+++ b/index.html
@@ -81,30 +81,210 @@
         </a>
       </div>
     </section>
-    <section>
+    <section class="container-card">
       <h2 class="text-center">Recomendados</h2>
       <p class="text-center card-title">Lo más vendido esta semana</p>
-      <div class="card">
-        <div class="card-img">
-          <img src="img/lampara.jpeg" alt="lampara">
+      <div class="card-parent">
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
         </div>
-        <form>
-          <p class="clasificacion text-center">
-            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-            --><label for="radio1">★</label><!--
-            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-            --><label for="radio2">★</label><!--
-            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-            --><label for="radio3">★</label><!--
-            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-            --><label for="radio4">★</label><!--
-            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-            --><label for="radio5">★</label>
-          </p>
-          <p class="text-center">Opiniones</p>
-        </form>
-        <h3 class="text-center">Lámpara Tubular Negra</h3>
-        <p class="price text-center">$35,00</p>
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="img/lampara.jpeg" alt="lampara">
+          </div>
+          <div class="card-info">
+            <form>
+              <p class="clasificacion text-center">
+                <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                --><label for="radio1">★</label><!--
+                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                --><label for="radio2">★</label><!--
+                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                --><label for="radio3">★</label><!--
+                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                --><label for="radio4">★</label><!--
+                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                --><label for="radio5">★</label>
+              </p>
+              <p class="text-center">Opiniones</p>
+            </form>
+            <h3 class="text-center">Lámpara Tubular Negra</h3>
+            <p class="price text-center">$35,00</p>
+            <p class="name text-center">
+              Lámpara Tubular negra apropiada para escritorio
+              o para una habitación.
+            </p>
+            <button type="button" class="btn-car">
+              <img src="img/carro.png" alt="" srcset="">
+              Añadir
+            </button>
+          </div>
+        </div>
       </div>
+    </section>
+    <section class="banner-general parallax">
+      <div class="content-banner">
+        <h3>Tenemos un 30% de descuento esta semana</h3>
+      </div>
+    </section>
+    <section class="about">
+      <h2 class="text-center">Quíenes Somos</h2>
     </section>
 </html>
