Se crea el footer

--- a/index.html
+++ b/index.html
@@ -284,7 +284,53 @@
         <h3>Tenemos un 30% de descuento esta semana</h3>
       </div>
     </section>
-    <section class="about">
+    <section class="about container">
       <h2 class="text-center">Quíenes Somos</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, quis voluptate quibusdam vitae odit aspernatur amet tempore veniam laboriosam, perspiciatis quaerat nostrum, sint unde rem est fuga? Magnam eum laborum quisquam corrupti nostrum dignissimos accusantium dicta aperiam nobis minima a excepturi asperiores repudiandae, nihil obcaecati placeat provident sint quasi sed rem pariatur laudantium fugiat natus cum? Libero, minus? Assumenda, alias?</p>
     </section>
+      <div class="wrapper">
+        <div class="container">
+          <div class="desplegable-parent">
+            <h4 class="title-menu-footer">Información</h4>
+            <div>
+              <img src="img/mas.png" alt="" srcset="">
+            </div>
+          </div>
+          <div class="desplegable-parent">
+            <h4 class="title-menu-footer">Nosotros</h4>
+            <div>
+              <img src="img/mas.png" alt="" srcset="">
+            </div>
+          </div>
+          <div class="desplegable-parent">
+            <h4 class="title-menu-footer">Cuenta</h4>
+            <div>
+              <img src="img/mas.png" alt="" srcset="">
+            </div>
+          </div>
+          <div class="desplegable-parent">
+            <h4 class="title-menu-footer">Contacto</h4>
+            <div>
+              <img src="img/mas.png" alt="" srcset="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="c-logo">
+          <img src="img/logo.png" alt="" srcset="">
+        </div>
+        <div class="copy text-center">
+          <p>
+            Todos Los derechos reservador &copy; 2020
+          </p>
+        </div>
+
+        <div class="credit-card">
+          <div class="container">
+            <img src="img/BACDS-4800_StickerTarjetasDigital520x90.png" alt="" srcset="">
+          </div>
+        
+        </div>
+    </footer>
 </html>
