--- a/index.html
+++ b/index.html
@@ -291,31 +291,44 @@
       <div class="wrapper">
         <div class="container">
           <div class="desplegable-parent">
-            <h4 class="title-menu-footer">Información</h4>
-            <div>
-              <img src="img/mas.png" alt="" srcset="">
+            <div class="div-option">
+              <h4 class="title-menu-footer">Información</h4>
+              <div class="icon-options">
+                <img src="img/mas.png" alt="" srcset="">
+              </div>
             </div>
-            
+            <ul class="options ">
+              <li>lorem1</li>
+              <li>lorem2</li>
+              <li>lorem3</li>
+            </ul>
           </div>
           <div class="desplegable-parent">
-            <h4 class="title-menu-footer">Nosotros</h4>
-            <div>
-              <img src="img/mas.png" alt="" srcset="">
+            <div class="div-option">
+              <h4 class="title-menu-footer">Información</h4>
+              <div class="icon-options">
+                <img src="img/mas.png" alt="" srcset="">
+              </div>
             </div>
+            <ul class="options ">
+              <li>lorem4</li>
+              <li>lorem5</li>
+              <li>lorem6</li>
+            </ul>
           </div>
           <div class="desplegable-parent">
-            <h4 class="title-menu-footer">Cuenta</h4>
-            <div>
-              <img src="img/mas.png" alt="" srcset="">
+            <div class="div-option">
+              <h4 class="title-menu-footer">Información</h4>
+              <div class="icon-options">
+                <img src="img/mas.png" alt="" srcset="">
+              </div>
             </div>
+            <ul class="options ">
+              <li>lorem1</li>
+              <li>lorem2</li>
+              <li>lorem3</li>
+            </ul>
           </div>
-          <div class="desplegable-parent">
-            <h4 class="title-menu-footer">Contacto</h4>
-            <div>
-              <img src="img/mas.png" alt="" srcset="">
-            </div>
-          </div>
-        </div>
       </div>
       <footer class="footer">
         <div class="c-logo">
