--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             </ul>
           </div>
       </div>
+      </div>
       <footer class="footer">
         <div class="c-logo">
           <img src="img/logo.png" alt="" srcset="">
@@ -342,9 +343,9 @@
 
         <div class="credit-card">
           <div class="container">
-            <img src="img/BACDS-4800_StickerTarjetasDigital520x90.png" alt="" srcset="">
+            <img src="img/BACDS-4800_StickerTarjetasDigital520x90.png" alt="">
           </div>
         
         </div>
-    </footer>
+      </footer>
 </html>
