Se termina todo el index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
           </div>
           <div class="c-logo">
-            <img src="img/logo.png" alt="" srcset="">
+            <a href="/index.html"><img src="img/logo.png" alt=""></a>
           </div>
           <div class="main-menu ">
             <ul class="menu-list">
@@ -67,11 +67,11 @@
     </div>
     <section class="section categories">
       <div class="div-categories">
-        <a href="#" class="link-categories">
+        <a href="/clothe.html" class="link-categories">
           <span class="text-categories">Ropa de damas y caballeros</span>
           <img src="img/caballeros.jpg" alt="caballeros" srcset="">
         </a>
-        <a href="" class="link-categories">
+        <a href="/furniture.html" class="link-categories">
           <span class="text-categories">Muebles para tu hogar</span>
           <img src="img/sala.jpg" alt="sala">
         </a>
@@ -287,6 +287,8 @@
     <section class="about container">
       <h2 class="text-center">Quíenes Somos</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, quis voluptate quibusdam vitae odit aspernatur amet tempore veniam laboriosam, perspiciatis quaerat nostrum, sint unde rem est fuga? Magnam eum laborum quisquam corrupti nostrum dignissimos accusantium dicta aperiam nobis minima a excepturi asperiores repudiandae, nihil obcaecati placeat provident sint quasi sed rem pariatur laudantium fugiat natus cum? Libero, minus? Assumenda, alias?</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, quis voluptate quibusdam vitae odit aspernatur amet tempore veniam laboriosam, perspiciatis quaerat nostrum, sint unde rem est fuga? Magnam eum laborum quisquam corrupti nostrum dignissimos accusantium dicta aperiam nobis minima a excepturi asperiores repudiandae, nihil obcaecati placeat provident sint quasi sed rem pariatur laudantium fugiat natus cum? Libero, minus? Assumenda, alias?</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, quis voluptate quibusdam vitae odit aspernatur amet tempore veniam laboriosam, perspiciatis quaerat nostrum, sint unde rem est fuga? Magnam eum laborum quisquam corrupti nostrum dignissimos accusantium dicta aperiam nobis minima a excepturi asperiores repudiandae, nihil obcaecati placeat provident sint quasi sed rem pariatur laudantium fugiat natus cum? Libero, minus? Assumenda, alias?</p>
     </section>
       <div class="wrapper">
         <div class="container">
@@ -296,12 +298,12 @@
               <div class="icon-options">
                 <img src="img/mas.png" alt="" srcset="">
               </div>
+              <ul class="options hide-options">
+                <li>lorem1</li>
+                <li>lorem2</li>
+                <li>lorem3</li>
+              </ul>
             </div>
-            <ul class="options ">
-              <li>lorem1</li>
-              <li>lorem2</li>
-              <li>lorem3</li>
-            </ul>
           </div>
           <div class="desplegable-parent">
             <div class="div-option">
@@ -309,12 +311,12 @@
               <div class="icon-options">
                 <img src="img/mas.png" alt="" srcset="">
               </div>
+              <ul class="options">
+                <li>lorem4</li>
+                <li>lorem5</li>
+                <li>lorem6</li>
+              </ul>
             </div>
-            <ul class="options ">
-              <li>lorem4</li>
-              <li>lorem5</li>
-              <li>lorem6</li>
-            </ul>
           </div>
           <div class="desplegable-parent">
             <div class="div-option">
@@ -322,20 +324,33 @@
               <div class="icon-options">
                 <img src="img/mas.png" alt="" srcset="">
               </div>
+              <ul class="options hide-options">
+                <li>lorem1</li>
+                <li>lorem2</li>
+                <li>lorem3</li>
+              </ul>
             </div>
-            <ul class="options ">
-              <li>lorem1</li>
-              <li>lorem2</li>
-              <li>lorem3</li>
-            </ul>
           </div>
-      </div>
+          <div class="desplegable-parent">
+            <div class="div-option">
+              <h4 class="title-menu-footer">Información</h4>
+              <div class="icon-options">
+                <img src="img/mas.png" alt="" srcset="">
+              </div>
+              <ul class="options">
+                <li>lorem4</li>
+                <li>lorem5</li>
+                <li>lorem6</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
       <footer class="footer">
-        <div class="c-logo">
-          <img src="img/logo.png" alt="" srcset="">
-        </div>
         <div class="copy text-center">
+          <div class="c-logo-footer">
+            <img src="img/logo.png" alt="" srcset="">
+          </div>
           <p>
             Todos Los derechos reservador &copy; 2020
           </p>
